--- a/src/template/site.html
+++ b/src/template/site.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<div class="page-top-strip"></div>
-		{{.Body}}
+		{{.Page}}
+		<!-- prettier-ignore -->
+		{{.Footer}}
 	</body>
 </html>
