--- a/src/template/style.css
+++ b/src/template/style.css
@@ -66,39 +66,11 @@ body {
 	font-size: 20px;
 	/* image has dithering to prevent banding */
 	/* therefore a fixed height is necessary */
-	background-image: url(pines-1080.jpg);
+	background-image: url(/pines-1080.jpg);
 	background-size: auto 1080px;
 	background-repeat: no-repeat;
 	background-position: -600px 8px; /* top strip */
-}
-
-.page-top-strip {
-	position: fixed;
-	margin: auto;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 8px;
-	background-color: #ff1744;
-}
-
-.title {
-	font-size: 104px;
-	font-weight: bold;
-	line-height: 104px;
-	color: white;
-	letter-spacing: 4px;
-	margin-top: -8px;
-	margin-bottom: 8px;
-	gap: 24px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-.title > .pony {
-	height: 104px;
-	margin-top: -24px;
+	max-width: 600px;
 }
 
 a {
@@ -109,7 +81,6 @@ a {
 	padding: 2px 6px;
 	display: inline-block;
 	font-weight: 600;
-	/* font-size: 18px; */
 	/* margin: 8px 0; */
 	display: inline-flex;
 	flex-direction: row;
@@ -132,21 +103,110 @@ a.active {
 	border-bottom: solid 2px white;
 }
 
-hr {
-	width: 300px;
-	border: none;
-	border-top: solid 2px #fff;
+h1 {
+	font-size: 32px;
 }
 
-.footer {
-	margin-top: 12px;
+h2 {
+	font-size: 28px;
+}
+
+h3 {
+	font-size: 24px;
+}
+
+h4,
+h5,
+h6 {
+	/* dont use these */
+	display: none;
+}
+
+.page-header-small {
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+	/* gap: 8px; */
+	margin-top: -8px;
+}
+
+.page-header-small h1 {
+	font-size: 64px;
+	margin-right: 8px;
+	margin-bottom: -4px;
+}
+
+.page-header-small h2 {
+	font-size: 32px;
+	margin-bottom: 4px;
+	/* opacity: 0.5; */
+}
+
+.page-header-small > a {
+	background-color: transparent;
+	color: #fff;
+	padding: inherit;
+}
+
+.page-header-small > img {
+	/* height: 64px; */
+	height: 80px;
+}
+
+hr {
+	/* width: 300px; */
+	border: none;
+	height: 2px;
+	background-color: white;
+}
+
+/* hr.faded {
+	background-color: transparent;
+	background-image: linear-gradient(90deg, white, transparent, transparent);
+} */
+
+.page-header-small-hr {
+	height: 3px;
+}
+
+.page-top-strip {
+	position: fixed;
+	margin: auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 8px;
+	background-color: #ff1744;
+}
+
+.page-header-title {
+	font-size: 104px;
+	font-weight: bold;
+	line-height: 104px;
+	color: white;
+	letter-spacing: 4px;
+	margin-top: -8px;
+	margin-bottom: 8px;
+	gap: 24px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.page-header-title > .pony {
+	height: 104px;
+	margin-top: -24px;
+}
+
+.page-footer-pages {
+	margin-top: 8px;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	column-gap: 12px;
-	row-gap: 6px;
+	column-gap: 8px;
+	row-gap: 4px;
 }
 
-.footer .break {
+.page-footer-pages .break {
 	flex-basis: 100%;
 }
