--- a/src/template/style.css
+++ b/src/template/style.css
@@ -122,6 +122,35 @@ h6 {
 	display: none;
 }
 
+.page-top-strip {
+	position: fixed;
+	margin: auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 8px;
+	background-color: #ff1744;
+}
+
+.page-header-title {
+	font-size: 104px;
+	font-weight: bold;
+	line-height: 104px;
+	color: white;
+	letter-spacing: 4px;
+	margin-top: -8px;
+	/* margin-bottom: 8px; */
+	gap: 24px;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+}
+
+.page-header-title > .pony {
+	height: 120px;
+	margin-top: -24px;
+}
+
 .page-header-small {
 	display: flex;
 	flex-direction: row;
@@ -165,39 +194,6 @@ hr {
 	background-color: transparent;
 	background-image: linear-gradient(90deg, white, transparent, transparent);
 } */
-
-.page-header-small-hr {
-	height: 3px;
-}
-
-.page-top-strip {
-	position: fixed;
-	margin: auto;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 8px;
-	background-color: #ff1744;
-}
-
-.page-header-title {
-	font-size: 104px;
-	font-weight: bold;
-	line-height: 104px;
-	color: white;
-	letter-spacing: 4px;
-	margin-top: -8px;
-	margin-bottom: 8px;
-	gap: 24px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-.page-header-title > .pony {
-	height: 104px;
-	margin-top: -24px;
-}
 
 .page-footer-pages {
 	margin-top: 8px;
