--- a/src/template/style.scss
+++ b/src/template/style.scss
@@ -13,7 +13,7 @@ body {
 	background-color: #111;
 	color: #fff;
 	margin: $page-margin;
-	font-family: "Maki Libertinus Mono";
+	font-family: "Maki Libertinus Mono", serif;
 	font-size: 20px;
 	// image has dithering to prevent banding
 	// therefore a fixed height is necessary
