--- a/src/render/style.scss
+++ b/src/render/style.scss
@@ -106,13 +106,13 @@ h6 {
 	align-items: flex-end;
 
 	> .pony {
-		height: 120px;
+		height: 128px;
 		margin-top: -24px;
 	}
 
 	@media (max-width: $page-break-width) {
 		margin-top: 0px;
-		padding-top: 8px;
+		padding-top: 24px;
 	}
 }
 
@@ -121,7 +121,7 @@ h6 {
 	flex-direction: row;
 	align-items: flex-end;
 	// gap: 8px;
-	margin-top: -32px;
+	margin-top: -16px;
 
 	@media (max-width: $page-break-width) {
 		margin-top: -8px;
@@ -146,7 +146,7 @@ h6 {
 		padding: inherit;
 	}
 
-	> .pong {
+	> .pony {
 		// height: 64px;
 		height: 80px;
 	}
