--- a/src/render/style.scss
+++ b/src/render/style.scss
@@ -95,11 +95,12 @@ h6 {
 	flex-direction: row;
 	align-items: flex-end;
 
+	// letter spacing behaves differently in chrome and firefox
 	.k {
-		letter-spacing: 0;
+		margin-left: -2px;
 	}
 	.i {
-		letter-spacing: -4px;
+		margin-left: -6px;
 	}
 
 	> .pony {
@@ -121,11 +122,12 @@ h6 {
 	margin-top: -16px;
 
 	letter-spacing: 2px;
+
 	.k {
-		letter-spacing: 0px;
+		margin-left: -1px;
 	}
 	.i {
-		letter-spacing: -2px;
+		margin-left: -3px;
 	}
 
 	@media (max-width: $page-break-width) {
