--- a/src/template/styles.scss
+++ b/src/template/styles.scss
@@ -14,7 +14,7 @@ body {
 	color: #fff;
 	margin: $page-margin;
 	// font-family: "Maki Libertinus Mono", serif;
-	font-family: "Maple Mono NL", serif;
+	font-family: "Maple Mono Maki", monospace;
 	font-size: 16px;
 	// image has dithering to prevent banding
 	// therefore a fixed height is necessary
@@ -86,69 +86,6 @@ h6 {
 	display: none;
 }
 
-.page-header-title {
-	font-size: 100px;
-	font-weight: bold;
-	line-height: 100px;
-	color: white;
-	margin-top: -8px;
-	// margin-bottom: 8px;
-	gap: 24px;
-	display: flex;
-	flex-direction: row;
-	align-items: flex-end;
-
-	> svg {
-		margin-bottom: 12px;
-	}
-
-	> .pony {
-		height: 128px;
-		margin-top: -24px;
-	}
-
-	@media (max-width: $page-break-width) {
-		margin-top: 0px;
-		padding-top: 24px;
-	}
-}
-
-.page-header-small {
-	display: flex;
-	flex-direction: row;
-	align-items: flex-end;
-	// gap: 8px;
-	margin-top: -16px;
-
-	@media (max-width: $page-break-width) {
-		margin-top: -8px;
-	}
-
-	svg {
-		margin-right: 6px;
-		margin-bottom: 8px;
-	}
-
-	h2 {
-		font-size: 28px;
-		margin-bottom: 3px;
-		font-weight: 600;
-		letter-spacing: 0px;
-		// opacity: 0.5;
-	}
-
-	> a {
-		background-color: transparent;
-		color: #fff;
-		padding: inherit;
-	}
-
-	> .pony {
-		// height: 64px;
-		height: 80px;
-	}
-}
-
 hr {
 	// width: 300px;
 	border: none;
@@ -165,46 +102,4 @@ hr {
 	// 		transparent
 	// 	);
 	// }
-}
-
-.page-footer-pages {
-	margin-top: 8px;
-	margin-bottom: 8px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	column-gap: 8px;
-	row-gap: 4px;
-
-	.break {
-		flex-basis: 100%;
-	}
-
-	// p {
-	// 	letter-spacing: -1px;
-	// }
-
-	a.active {
-		font-weight: 700;
-		// border-bottom: solid 2px white;
-		// margin-bottom: -2px;
-		background: transparent;
-		color: #fff;
-		// padding-left: 3px;
-		// padding-right: 3px;
-		// border-radius: 0;
-		position: relative;
-
-		&::after {
-			content: "";
-			margin: auto;
-			position: absolute;
-			bottom: -2px;
-			left: 0;
-			right: 0;
-			height: 2px;
-			background-color: #fff;
-			border-radius: 999px;
-		}
-	}
 }
